--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,14 +31,56 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">SalesForce</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">24.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">SalesForce</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">0</td><td class="numi">0.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">SalesForce &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">salesforce_Tests.HomeTest</td><td><a href="#m1"><b>ViewMenu</b>  </a></td><td class="numi">1</td><td>1634638326298</td><td class="numi">1149</td></tr>
+<tr><th colspan="4">SalesForce &#8212; failed (configuration methods)</th></tr>
+<tr class="failedodd"><td rowspan="1">salesforce_Tests.ContactUsTest</td><td><a href="#m1"><b>initialize</b>  </a></td><td class="numi">1</td><td>1634891788635</td><td class="numi">0</td></tr>
+<tr><th colspan="4">SalesForce &#8212; skipped (configuration methods)</th></tr>
+<tr class="skippedodd"><td rowspan="1">salesforce_Tests.ContactUsTest</td><td><a href="#m2"><b>TeardownTest</b>  </a></td><td class="numi">1</td><td>1634891789084</td><td class="numi">0</td></tr>
+<tr><th colspan="4">SalesForce &#8212; skipped</th></tr>
+<tr class="skippedodd"><td rowspan="1">salesforce_Tests.ContactUsTest</td><td><a href="#m3"><b>ViewMenu</b>  </a></td><td class="numi">1</td><td>1634891788650</td><td class="numi">1</td></tr>
 </table>
 <h1>SalesForce</h1>
-<h2 id="m1">salesforce_Tests.HomeTest:ViewMenu</h2>
+<h2 id="m1">salesforce_Tests.ContactUsTest:initialize</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th></tr>
+<tr class="param stripe"><td>$browser</td>
+</tr>
+<tr><td style="padding-left:3em" colspan="1">
+<p>Browser is not correct</p>
+salesforce_Tests.BaseTest.initialize(BaseTest.java:52)
+<br/>at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+<br/>at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+<br/>at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+<br/>at java.lang.reflect.Method.invoke(Method.java:498)
+<br/>at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)
+<br/>at org.testng.internal.Invoker.invokeConfigurationMethod(Invoker.java:564)
+<br/>at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:213)
+<br/>at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:138)
+<br/>at org.testng.internal.TestMethodWorker.invokeBeforeClassMethods(TestMethodWorker.java:175)
+<br/>at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:107)
+<br/>at org.testng.TestRunner.privateRun(TestRunner.java:767)
+<br/>at org.testng.TestRunner.run(TestRunner.java:617)
+<br/>at org.testng.SuiteRunner.runTest(SuiteRunner.java:334)
+<br/>at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)
+<br/>at org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)
+<br/>at org.testng.SuiteRunner.run(SuiteRunner.java:240)
+<br/>at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+<br/>at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
+<br/>at org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)
+<br/>at org.testng.TestNG.runSuitesLocally(TestNG.java:1123)
+<br/>at org.testng.TestNG.run(TestNG.java:1031)
+<br/>at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+<br/>at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+<br/>at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+<br/>1 lines not shown
+</td></tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">salesforce_Tests.ContactUsTest:TeardownTest</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m3">salesforce_Tests.ContactUsTest:ViewMenu</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
